<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>gp</groupId>
    <artifactId>loop</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <loop.start>finance-dashboard</loop.start>
        <loop.db.path>${project.basedir}/../../database/loop.db</loop.db.path>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <!-- ================= DEPENDENCIES ================= -->
   <dependencies>

	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-controls</artifactId>
	        <version>21.0.3</version>
	        <classifier>mac-aarch64</classifier>
	    </dependency>
	
	    <dependency>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-fxml</artifactId>
	        <version>21.0.3</version>
	        <classifier>mac-aarch64</classifier>
	    </dependency>
	
	    <dependency>
	        <groupId>org.xerial</groupId>
	        <artifactId>sqlite-jdbc</artifactId>
	        <version>3.46.1.0</version>
	    </dependency>

	    <dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter</artifactId>
	        <version>5.10.2</version>
	        <scope>test</scope>
	    </dependency>

	</dependencies>

    <!-- ================= BUILD ================= -->
    <build>
        <plugins>

            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- JavaFX Runner -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                        <mainClass>gp.loop.App</mainClass>
                        <options>
                            <option>-Dloop.start=${loop.start}</option>
                            <option>-Dloop.db.path=${loop.db.path}</option>
                            <option>--enable-native-access=javafx.graphics</option>
                        </options>
                </configuration>
            </plugin>

            <!-- JUnit test runner -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>

        </plugins>
    </build>

</project>
